--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>html-vue</title>
+    <title>HTML Canvas</title>
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
   </head>
   <body>
     <div id="app"></div>
